Fixed a border layout issue for the accordion

--- a/src/styles/molecules/_molecules.accordion.scss
+++ b/src/styles/molecules/_molecules.accordion.scss
@@ -70,7 +70,7 @@
       }
 
       + .m-accordion__content {
-        display: block;
+        display: flex;
         max-height: none;
       }
     }
